--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
-    <link rel="stylsheet" type="text/css" href="http://localhost:5100/ribbon/shopsense-proto-0.0.1.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:5100/ribbon/shopsense-proto-0.0.1.css">
     <!-- <script src="http://localhost:5100/ribbon/shopsense-proto-0.0.1.js"></script> -->
 
 
