--- a/test.html
+++ b/test.html
@@ -23,6 +23,11 @@
       typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");for(g=0;g<i.length;g++)f(c,i[g]);
       b._i.push([a,e,d])};b.__SV=1.2}})(document,window.mixpanel||[]);
     </script>
+
+    <script>
+      window.bootstrappedData = {{json $data}}
+    </script>
+
   </head>
   <body ui-event="{ dragover: '$event.preventDefault()', drop: '$event.preventDefault()' }">
     <header class="header hidden-xs">
